--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             {{#item}}
             <article>
             <h1>{{type}}</h1>
-            <div class="meta"><a href="{{url}}" target="_blank">Allikas</a> • {{date}} •
+            <div class="meta"><a href="{{url}}" target="_blank">AT</a> • {{date}} •
             <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}" target="_blank">Google Maps</a></div>
             <div class="description">{{{description}}}</div>
             </article>
