--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <p>
         Teadete saamiseks saada e-kiri <a href="mailto:silvia@elfond.ee">silvia@elfond.ee</a>
         </p>
+        <p><a href="https://www.facebook.com/Keskkonnateated">Facebook</a> • <a href="https://github.com/kristjanjansen/environmental_notices">Github</a>
+        </p>
         </article>
     </script>
     
@@ -31,7 +33,7 @@
             <article>
             <h1>{{type}}</h1>
             <div class="meta"><a href="{{url}}" target="_blank">AT</a> • {{date}} •
-            <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}" target="_blank">Google Maps</a></div>
+            <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}" target="_blank">Google kaart</a></div>
             <div class="description">{{{description}}}</div>
             </article>
             {{/item}}            
