--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-    <title>Kuressaare</title>
+    <title>Keskkonnateated</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta charset="utf-8">
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
